# Class-Personal-Projects

./: PCA_g1-1_b1_thresh_1.20,varK.fig  PCA_g1-2_b1_thresh_1.20_varK.fig  PCA_g1-3_b1_thresh_1.20,varK.fig  PCA_g1_b1_thresh_.55,varK.fig  PCA_g1_ep4_thresh-.55_varK.fig  PCA_g2_b1_thresh_.55,varK.fig  PCA_g2_ep4_thresh-.55_varK.fig  PCA_g3_b1_thresh_.55,varK.fig  PCA_g3_ep4_thresh-.55_varK.fig  PCA_g4_b1_thresh_.55,varK.fig  PCA_g5_b1_thresh_.55,varK.fig
multimodal-rag/: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
multimodal-rag/examples/: basic_usage.py
multimodal-rag/scripts/: run_pipeline.py
multimodal-rag/src/: __init__.py  config.py
multimodal-rag/src/document_processing/: __init__.py  chunking.py  parsers.py  table_processor.py
multimodal-rag/src/embeddings/: __init__.py  embedding_service.py  image_describer.py  multimodal_embeddings.py
multimodal-rag/src/evaluation/: __init__.py  evaluator.py  metrics.py  synthetic_data.py
multimodal-rag/src/generation/: __init__.py  generator.py  query_router.py
multimodal-rag/src/retrieval/: __init__.py  hybrid_retriever.py  multi_vector_retriever.py  reranker.py  vector_store.py
multimodal-rag/src/utils/: __init__.py
multimodal-rag/ui/: gradio_app.py  streamlit_app.py
